--- a/index.html
+++ b/index.html
@@ -1,97 +1,71 @@
 <!DOCTYPE html>
 <html lang="nl">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1"
-    />
-    <title>
-      Vervoerregio Amsterdam - Toolgankelijkheid
-    </title>
-    <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="stylesheet" href="../styles/mobile.css" />
-    <link rel="stylesheet" href="../styles/tablet.css" />
-    <link rel="stylesheet" href="../styles/desktop.css" />
-    <link
-      rel="stylesheet"
-      href="../styles/desktop-xl.css"
-    />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-  </head>
 
-  <body>
-    <header>
-      <img
-        id="logo"
-        src="../assets/logo.png"
-        alt="logo Vervoerregio Amsterdam"
-      />
-      <div id="after-curve"></div>
-    </header>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>
+    Vervoerregio Amsterdam - Toolgankelijkheid
+  </title>
+  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="../styles/mobile.css" />
+  <link rel="stylesheet" href="../styles/tablet.css" />
+  <link rel="stylesheet" href="../styles/desktop.css" />
+  <link rel="stylesheet" href="../styles/desktop-xl.css" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
+</head>
 
-    <!-- Dit is de sectie waar de content staat -->
-    <main>
-      <div class="wrapper">
-        <div class="intro">
-          <h1>
-            <small>Maak kennis met</small> Toolgankelijk
-          </h1>
-        </div>
-        <nav class="options">
-          <h2>Kies een categorie</h2>
-          <div class="option-group">
-            <a href="./waarneembaar.html" class="categorie">
-              <svg
-                viewBox="0 0 388 268"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M168.133 0H25.8667C17.2444 0 0 5.16 0 25.8V242C0 250.6 5.17333 267.8 25.8667 267.8H362.133C370.756 267.8 388 262.64 388 242V51.6C388 43 382.827 25.8 362.133 25.8H219.867C215.556 25.8 204.347 23.22 194 12.9C183.653 2.58 172.444 0 168.133 0Z"
-                />
-              </svg>
-              <p>Waarneembaar</p>
-            </a>
-            <a href="./begrijpelijk.html" class="categorie">
-              <svg
-                viewBox="0 0 388 268"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M168.133 0H25.8667C17.2444 0 0 5.16 0 25.8V242C0 250.6 5.17333 267.8 25.8667 267.8H362.133C370.756 267.8 388 262.64 388 242V51.6C388 43 382.827 25.8 362.133 25.8H219.867C215.556 25.8 204.347 23.22 194 12.9C183.653 2.58 172.444 0 168.133 0Z"
-                />
-              </svg>
-              <p>Begrijpelijk</p>
-            </a>
-            <a href="./bedienbaar.html" class="categorie">
-              <svg
-                viewBox="0 0 388 268"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M168.133 0H25.8667C17.2444 0 0 5.16 0 25.8V242C0 250.6 5.17333 267.8 25.8667 267.8H362.133C370.756 267.8 388 262.64 388 242V51.6C388 43 382.827 25.8 362.133 25.8H219.867C215.556 25.8 204.347 23.22 194 12.9C183.653 2.58 172.444 0 168.133 0Z"
-                />
-              </svg>
-              <p>Bedienbaar</p>
-            </a>
-            <a href="./robuust.html" class="categorie">
-              <svg
-                viewBox="0 0 388 268"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M168.133 0H25.8667C17.2444 0 0 5.16 0 25.8V242C0 250.6 5.17333 267.8 25.8667 267.8H362.133C370.756 267.8 388 262.64 388 242V51.6C388 43 382.827 25.8 362.133 25.8H219.867C215.556 25.8 204.347 23.22 194 12.9C183.653 2.58 172.444 0 168.133 0Z"
-                />
-              </svg>
-              <p>Robuust</p>
-            </a>
-          </div>
-        </nav>
+<body>
+  <header>
+    <img id="logo" src="../assets/logo.png" alt="logo Vervoerregio Amsterdam" />
+    <div id="after-curve"></div>
+  </header>
+
+  <!-- Dit is de sectie waar de content staat -->
+  <main>
+    <div class="wrapper">
+      <div class="intro">
+        <h1>
+          <small>Maak kennis met</small> Toolgankelijk
+        </h1>
       </div>
-    </main>
-  </body>
+
+      <nav class="options">
+        <h2>Kies een categorie</h2>
+        <div class="option-group">
+          <a href="./waarneembaar.html" class="categorie">
+            <svg viewBox="0 0 388 268" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M168.133 0H25.8667C17.2444 0 0 5.16 0 25.8V242C0 250.6 5.17333 267.8 25.8667 267.8H362.133C370.756 267.8 388 262.64 388 242V51.6C388 43 382.827 25.8 362.133 25.8H219.867C215.556 25.8 204.347 23.22 194 12.9C183.653 2.58 172.444 0 168.133 0Z" />
+            </svg>
+            <p>Waarneembaar</p>
+          </a>
+
+          <a href="./begrijpelijk.html" class="categorie">
+            <svg viewBox="0 0 388 268" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M168.133 0H25.8667C17.2444 0 0 5.16 0 25.8V242C0 250.6 5.17333 267.8 25.8667 267.8H362.133C370.756 267.8 388 262.64 388 242V51.6C388 43 382.827 25.8 362.133 25.8H219.867C215.556 25.8 204.347 23.22 194 12.9C183.653 2.58 172.444 0 168.133 0Z" />
+            </svg>
+            <p>Begrijpelijk</p>
+          </a>
+          <a href="./bedienbaar.html" class="categorie">
+            <svg viewBox="0 0 388 268" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M168.133 0H25.8667C17.2444 0 0 5.16 0 25.8V242C0 250.6 5.17333 267.8 25.8667 267.8H362.133C370.756 267.8 388 262.64 388 242V51.6C388 43 382.827 25.8 362.133 25.8H219.867C215.556 25.8 204.347 23.22 194 12.9C183.653 2.58 172.444 0 168.133 0Z" />
+            </svg>
+            <p>Bedienbaar</p>
+          </a>
+          <a href="./robuust.html" class="categorie">
+            <svg viewBox="0 0 388 268" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M168.133 0H25.8667C17.2444 0 0 5.16 0 25.8V242C0 250.6 5.17333 267.8 25.8667 267.8H362.133C370.756 267.8 388 262.64 388 242V51.6C388 43 382.827 25.8 362.133 25.8H219.867C215.556 25.8 204.347 23.22 194 12.9C183.653 2.58 172.444 0 168.133 0Z" />
+            </svg>
+            <p>Robuust</p>
+          </a>
+        </div>
+      </nav>
+    </div>
+  </main>
+</body>
+
 </html>
